--- a/public/login.html
+++ b/public/login.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+        <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - WebApp</title>
+    <title>Iniciar Sesión - artTEC</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="login-form">
+            <div class="logo-container">
+                <img src="icon.ico" alt="Logo" class="logo">
+            </div>
             <h2>Iniciar Sesión</h2>
             <form id="loginForm">
                 <div class="form-group">
-                    <label for="username">Usuario:</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="username">Usuario o Email:</label>
+                    <input type="text" id="username" name="username" placeholder="Ingresa tu usuario o email" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña:</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
             </form>
@@ -48,11 +52,7 @@
                 const data = await response.json();
 
                 if (data.success) {
-                    messageDiv.textContent = 'Login exitoso. Redirigiendo...';
-                    messageDiv.className = 'message success';
-                    setTimeout(() => {
-                        window.location.href = '/dashboard';
-                    }, 1000);
+                    window.location.href = '/';
                 } else {
                     messageDiv.textContent = data.error || 'Error en el login';
                     messageDiv.className = 'message error';
