Robot conexion + topics gestion

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -28,6 +28,17 @@
             <div class="content">
                 <h3>Bienvenido a tu Dashboard</h3>
                 <p>Esta es un área protegida que solo pueden ver los usuarios autenticados.</p>
+                
+                <!-- Acceso al Robot -->
+                <div class="robot-access" style="background: #f8f9fa; padding: 20px; border-radius: 10px; margin: 20px 0; border-left: 4px solid #4129ca;">
+                    <h4>🤖 Control de Robot TurtleBot</h4>
+                    <p>Accede al panel de control para gestionar el robot TurtleBot a través de ROS WebSocket.</p>
+                    <div style="margin-top: 15px;">
+                        <a href="/robot" class="btn btn-primary">Abrir Panel de Control</a>
+                        <span style="margin-left: 15px; color: #666; font-size: 14px;">Estado: 🟢 Disponible</span>
+                    </div>
+                </div>
+                
                 <div class="stats">
                     <div class="stat-card">
                         <h4>Total de Usuarios</h4>
