feat: Enhance TurtleBot Web Control System
- Updated .gitignore to include additional files and directories for better version control.
- Revamped README.md to reflect the new features and functionalities of the TurtleBot control system.
- Changed package.json to rename the project and add new scripts for testing and diagnostics.
- Modified public/index.html and public/robot.html for improved user interface and logging messages.
- Created .env.example for environment variable configuration.
- Added CHANGELOG.md to document project changes and updates.
- Introduced RESUMEN_EJECUTIVO.md for a comprehensive executive summary of the project.

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
                 <div class="session-info">
                     <span class="welcome-text">Bienvenido, <span id="userName"></span></span>
                     <div class="session-buttons">
-                        <a href="/robot" class="btn btn-outline btn-small">🤖 Control Robot</a>
-                        <button id="adminBtn" class="btn btn-outline btn-small" style="display: none;">⚙️ Admin</button>
+                        <a href="/robot" class="btn btn-outline btn-small">Control Robot</a>
+                        <button id="adminBtn" class="btn btn-outline btn-small" style="display: none;">Admin</button>
                         <button id="logoutBtn" class="btn btn-secondary btn-small">Cerrar Sesión</button>
                     </div>
                 </div>
