feat: Enhance robot management and waypoint functionality
- Added handling for service responses in robotManager to retrieve available topics.
- Removed simulated robot info and topic lists, now utilizing real-time data from the robot.
- Updated server API to reflect changes in robot status and available topics.
- Introduced a new HTML page for managing waypoints with a 3D visualization using Three.js.
- Implemented functionality for adding, clearing, and sending waypoints to the robot.
- Enhanced user interface for better interaction with the waypoint management system.

--- a/public/login.html
+++ b/public/login.html
@@ -57,13 +57,9 @@
                     
                     // Si es admin, redirigir al panel administrativo
                     if (data.isAdmin) {
-                        setTimeout(() => {
-                            window.location.href = data.redirectTo;
-                        }, 1000);
+                        window.location.href = '/admin';
                     } else {
-                        setTimeout(() => {
-                            window.location.href = '/';
-                        }, 1000);
+                        window.location.href = '/';
                     }
                 } else {
                     messageDiv.textContent = data.error || 'Error en el login';
