--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -31,7 +31,7 @@
                 
                 <!-- Acceso al Robot -->
                 <div class="robot-access" style="background: #f8f9fa; padding: 20px; border-radius: 10px; margin: 20px 0; border-left: 4px solid #4129ca;">
-                    <h4>🤖 Control de Robot TurtleBot</h4>
+                    <h4>Control de Robot</h4>
                     <p>Accede al panel de control para gestionar el robot TurtleBot a través de ROS WebSocket.</p>
                     <div style="margin-top: 15px;">
                         <a href="/robot" class="btn btn-primary">Abrir Panel de Control</a>
