Add better stats and mail notifications support

--- a/public/admin.html
+++ b/public/admin.html
@@ -914,6 +914,9 @@
                 <li class="nav-item">
                     <a href="/admin" class="nav-link" id="navAdmin">Administración</a>
                 </li>
+                <li class="nav-item">
+                    <a href="/stats" class="nav-link" id="navStats">Estadísticas</a>
+                </li>
 
                 <!-- Sección móvil de usuario (solo visible en móvil cuando está logueado) -->
                 <li class="nav-item nav-mobile-user" id="navMobileUser" style="display: none;">
@@ -1009,25 +1012,6 @@
             <div class="admin-title">
                 <img src="icon.ico" alt="Logo" style="width: 40px; height: 40px;">
                 <h1>Administración</h1>
-            </div>
-        </div>
-
-        <!-- Estadísticas -->
-        <div class="admin-section">
-            <h2>Estadísticas del Sistema</h2>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-value" id="totalUsers">-</div>
-                    <div>Usuarios Registrados</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-value" id="totalRoutes">-</div>
-                    <div>Tours Creados</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-value" id="totalToursCompleted">-</div>
-                    <div>Tours Realizados</div>
-                </div>
             </div>
         </div>
 
