--- a/public/login.html
+++ b/public/login.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a href="/admin" class="nav-link" id="navAdmin" style="display: none;">Administración</a>
                 </li>
+                <li class="nav-item">
+                    <a href="/stats" class="nav-link" id="navStats" style="display: none;">Estadísticas</a>
+                </li>
             </ul>
             
             <!-- Sección de usuario -->
